# src/main/java/org/onecx/document/management/rs/v1/controllers/AttachmentController.java
@@ -1,13 +1,19 @@
 package org.onecx.document.management.rs.v1.controllers;
 
-import gen.org.onecx.document.management.rs.v1.AttachmentControllerV1Api;
+import java.util.List;
+
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.ws.rs.core.Response;
+
 import org.jboss.resteasy.reactive.server.ServerExceptionMapper;
 import org.onecx.document.management.rs.v1.exception.RestException;
 import org.onecx.document.management.rs.v1.mappers.DocumentMapper;
 import org.onecx.document.management.rs.v1.services.AttachmentService;
+
+import gen.org.onecx.document.management.rs.v1.AttachmentControllerV1Api;
+import gen.org.onecx.document.management.rs.v1.model.AttachmentMetadataUploadDTO;
+import gen.org.onecx.document.management.rs.v1.model.AttachmentStorageAuditRequestDTO;
 
 @ApplicationScoped
 public class AttachmentController implements AttachmentControllerV1Api {
@@ -22,6 +28,19 @@ public class AttachmentController implements AttachmentControllerV1Api {
     public Response getAttachmentDetails(String attachmentId) {
         final var attachment = attachmentService.getAttachmentDetails(attachmentId);
         return Response.ok(mapper.mapAttachment(attachment)).build();
+    }
+
+    @Override
+    public Response uploadAttachmentsMetadata(List<AttachmentMetadataUploadDTO> attachmentMetadataUploadDTOs) {
+        attachmentService.updateAttachmentsMetadata(attachmentMetadataUploadDTOs);
+        return Response.ok().build();
+    }
+
+    @Override
+    public Response createStorageAuditsForAttachments(
+            List<AttachmentStorageAuditRequestDTO> attachmentStorageAuditRequestDTOs) {
+        attachmentService.createStorageAuditLogs(attachmentStorageAuditRequestDTOs);
+        return Response.status(Response.Status.CREATED).build();
     }
 
     @ServerExceptionMapper
